--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Knowledge"
         tools:targetApi="31">
         <activity
-            android:name=".GiveExamActivity"
+            android:name=".Activities.GiveExamActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
