--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,21 @@
         android:theme="@style/Theme.Knowledge"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterAdmin"
+            android:name=".AdminDashboard"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".AdminLoginActivity"
+            android:name=".Activities.RegisterAdmin"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Activities.AdminLoginActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
