--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,13 @@ dependencies {
 
     implementation 'com.github.fornewid:neumorphism:0.3.2'
 
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth'
+
 
     //for ui flexability.......
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
