--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.1'
 
 
+    //    Room Database
+    def room_version = "2.4.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
 }
