--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Activities.GiveExamActivity"
+            android:name=".Activities.GiveExamOrReadQuestions"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
